# righttoask-trustee

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
data/: alice.json  bob.json  charlie.json  election-manifest.json
docs/: trustee-manifest-format.md
src/: elgamal-gen.py  main.py  signature-gen.py
